Disclaimer Arrow wrap fix

--- a/sgem-home-equity-loan-calculator/assets/css/hel-cal-calculator.css
+++ b/sgem-home-equity-loan-calculator/assets/css/hel-cal-calculator.css
@@ -725,7 +725,7 @@
 .sgem-hel-details-disclaimer summary {
     
    cursor: pointer;
-   width: 150px;
+   width: 100%;
    display: flex !important;
    flex-wrap: nowrap !important;
    flex-direction: row;
@@ -738,7 +738,7 @@
    font-size: 16px;
    cursor: pointer;
    color: #474747;
-   width: 78px;
+	width: 105px;
     padding-right: 25px;
 }
 
